Changes for REDIPS.drag library

4.6.14
- added public property REDIPS.drag.autoscroll with default value "true"
  If set to "false" then autoscroll option will be completely turned off for page and any DIV container with CSS style overflow set to anything but 'visible'

4.6.13
- myhandler_deleted call is moved to the end inside element_deleted method
- it seemed that find_cell() method was not published as public - now it is

4.6.12
- added control inside REDIPS.drag.relocate() method - "from" and "to" input parameters should be element nodes

4.6.11
- added boolean parameter "cloned" to the myhandler_deleted event handler (reference of original DIV element is stored in REDIPS.drag.obj_old)

4.6.10
- fixed bug for dropped elements in iPad
  * it seems that Safari Mobile loses registrated events (traditional model) assigned to the DIV element
  * in element_drop() is added definition of event listener after appendChild/insertBefore (obj.onmousedown = handler_onmousedown; ...)

4.6.9
- fixed bug in save_content() - DIV elements without "drag" class name are skipped - thanks to CG Developer
- added parameter REDIPS.drag.save_pname to define parameter name in save_content() method

4.6.8
- modified save_content() method
  * first parameter is id or table reference
  * second parameter is optional and defines output in JSON format
  * table index is not contained in output because save_content() scans content for asked table (table is already known)

4.6.7
- method shift_cells() is declared as public
- fixed bug in case of enable_drag() for newly added DIV element to the table

4.6.6
- added option multiple_drop with options "top" and "bottom" (default value is "bottom") - thanks to Mark Jacobs
- added event handler myhandler_row_dropped_before() - if false is return from this event handler then row drop will be canceled
- added public method delete_object() 

4.6.5